--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,42 +1,21 @@
 version: 2.1
 
-workflows:
-  version: 2
-  build:
-    jobs:
-      - build
+orbs:
+  python: circleci/python@0.2.1
 
 jobs:
-  build:
-    working_directory: ~/mern-starter
-    docker:
-      - image: circleci/node:10.16.3
-      - image: mongo:4.2.0
+  build-and-test:
+    executor: python/default
     steps:
       - checkout
+      - python/load-cache
+      - python/install-deps
+      - python/save-cache
       - run:
-          name: update-npm
-          command: 'sudo npm install -g npm@5'
-      - restore_cache:
-          key: dependency-cache-{{ checksum "package-lock.json" }}
-      - run:
-          name: install-npm-wee
-          command: npm install
-      - save_cache:
-          key: dependency-cache-{{ checksum "package-lock.json" }}
-          paths:
-            - ./node_modules
-      - run:
-          name: test
-          command: npm test
-      - run:
-          name: code-coverage
-          command: './node_modules/.bin/nyc report --reporter=text-lcov'
-      - store_artifacts:
-          path: test-results.xml
-          prefix: tests
-      - store_artifacts:
-          path: coverage
-          prefix: coverage
-      - store_test_results:
-          path: test-results.xml
+          command: ./manage.py test
+          name: Test
+
+workflows:
+  main:
+    jobs:
+      - build-and-test
